--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "questionic server",
   "main": "dist/index.js",
   "scripts": {
-    "test": "tsc --watch"
+    "dev": "tsx src/main.ts --watch",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,25 @@
   "bugs": {
     "url": "https://github.com/euguiihenry/questionic-server/issues"
   },
-  "homepage": "https://github.com/euguiihenry/questionic-server#readme"
+  "homepage": "https://github.com/euguiihenry/questionic-server#readme",
+  "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.2",
+    "@types/pg": "^8.11.6",
+    "dotenv": "^16.4.5",
+    "tsup": "^8.1.0",
+    "tsx": "^4.15.5",
+    "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.43.4",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "pg": "^8.12.0",
+    "ts-node": "^10.9.2"
+  }
 }
