--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx src/main.ts --watch",
+    "build": "tsup src",
     "start": "node dist/server.js"
   },
   "repository": {
